--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "gulp-sass": "^2.0.1",
     "gulp-scss-lint": "^0.2.0",
     "gulp-sequence": "^0.3.2",
+    "gulp-shell": "^0.5.0",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.5",
@@ -95,6 +96,7 @@
     "imports-loader": "^0.6.4",
     "is-retina": "^1.0.3",
     "jquery": "^2.1.4",
+    "jsdoc": "^3.3.3",
     "json-loader": "^0.5.2",
     "karma": "^0.13.9",
     "karma-chai": "^0.1.0",
