--- a/package.json
+++ b/package.json
@@ -83,12 +83,12 @@
     "gulp-base64": "^0.1.3",
     "gulp-concat": "^2.5.2",
     "gulp-eslint": "^0.12.0",
+    "gulp-exec": "^2.1.2",
     "gulp-nodemon": "^2.0.3",
     "gulp-plumber": "^1.0.1",
     "gulp-sass": "^2.0.1",
     "gulp-scss-lint": "^0.2.0",
     "gulp-sequence": "^0.3.2",
-    "gulp-shell": "^0.5.0",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.5",
