--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "chai": "^3.0.0",
     "es6-promise": "^3.0.2",
     "escape-html": "^1.0.2",
+    "esdoc": "^0.4.1",
     "eslint": "^0.22.1",
     "eslint-plugin-react": "^2.4.0",
     "filesize": "^3.1.2",
