--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "body-parser": "^1.13.3",
     "get-query-param": "^1.0.0",
     "gulp-mocha": "^2.1.2",
+    "history": "^1.12.5",
     "hmacsha1": "^1.0.0",
     "keygrip": "^1.0.1",
     "lodash": "^3.9.3",
@@ -55,6 +56,7 @@
     "qs": "^4.0.0",
     "react": "^0.13.3",
     "react-bem-helper": "^1.1.0",
+    "react-router": "^1.0.0-rc3",
     "react-tools": "^0.13.3",
     "recursive-escape": "^1.0.0",
     "recursive-unescape": "^1.0.0",
