--- a/localdev/nginx/www.conf.in
+++ b/localdev/nginx/www.conf.in
@@ -46,6 +46,14 @@ server {
         break;
     }
 
+    location ~ '^/__node__/__static__/' {
+        ssi off;
+        rewrite ^/__node__/__static__/(.*) /$1;
+        proxy_set_header X-SKIN $skin_name;
+        proxy_pass http://${backend:node};
+        break;
+    }
+
     location ~ '^/__rss2__/' {
         ssi off;
         rewrite ^/__rss2__/(.*) /$1;
