--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ PAGINATED=12
 BUG_MUNCHER=false
 GOLDBACH_SALT=FyfgR5fadpR7S9w
 DISQUS_SHORTNAME=azmedien-staging
-KALTURA_ACCOUNT_ID=1719221
-KALTURA_AUTOPLAY=true
+KALTURA_ACCOUNT_ID=1789881
+KALTURA_AUTOPLAY=false
 KALTURA_PLAYER_ID=26605721
 KALTURA_PLAYER_NOADS_ID=30231131
 KALTURA_TRACKING_URL=https://aznetz.wemfbox.ch/cgi-bin/ivw/CP/aaz?r=http%3A//www.aargauerzeitung.ch/ressort/subressort/article-title-129298028&d=&x=
