--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "az-nwch-js",
   "version": "0.0.55",
   "engines": {
-    "node": "0.12.x"
+    "node": "4.0.0",
+    "npm": "2.14.2"
   },
   "private": true,
   "description": "Front-end stack for AZ Medien",
