--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel": "^5.4.7",
     "babel-core": "^5.8.20",
     "babel-loader": "^5.1.3",
+    "body-parser": "^1.13.3",
     "camelcase": "^1.1.0",
     "consolidate": "^0.13.1",
     "cookie": "^0.2.2",
@@ -43,14 +44,16 @@
     "dotenv": "^1.2.0",
     "errorhandler": "^1.1.1",
     "express": "^4.13.3",
-    "body-parser": "^1.13.3",
     "get-query-param": "^1.0.0",
     "gulp-mocha": "^2.1.2",
     "history": "^1.12.5",
     "hmacsha1": "^1.0.0",
+    "kaltura": "git+https://github.com/kaltura/KalturaGeneratedAPIClientsNodeJS.git",
     "keygrip": "^1.0.1",
     "lodash": "^3.9.3",
     "moment": "^2.10.6",
+    "nodejs-nocaptcha-recaptcha": "^1.0.0",
+    "nodemailer": "^1.4.0",
     "nunjucks": "^1.3.4",
     "on-headers": "^1.0.0",
     "qs": "^4.0.0",
@@ -68,9 +71,7 @@
     "slugify": "^0.1.1",
     "sprintf-js": "^1.0.2",
     "strong-express-metrics": "^1.1.0",
-    "webpack": "^1.9.10",
-    "nodejs-nocaptcha-recaptcha": "^1.0.0",
-    "nodemailer": "^1.4.0"
+    "webpack": "^1.9.10"
   },
   "optionalDependencies": {},
   "devDependencies": {
